2010-03-02  Karl Berry  <karl@gnu.org>

	* tex4ht-html-speech.tex,
	* tex4ht-html0.tex: update license notices.
	* Makefile: add derivations.

2010-02-28  Karl Berry  <karl@gnu.org>

	* tex4ht-html32.tex,
	* tex4ht-html4.tex: update license notices.
	* Makefile: add derivations.

2010-02-26  Karl Berry  <karl@gnu.org>

	* tex4ht-info-mml.tex,
	* tex4ht-info-ooffice.tex: update license notices.
	* Makefile: add derivations.

2010-02-25  Karl Berry  <karl@gnu.org>

	* tex4ht-info-svg.tex,
	* tex4ht-javahelp-xtpipes.tex: update license notices.
	* Makefile: add derivations.

2010-02-23  Karl Berry  <karl@gnu.org>

	* tex4ht-javahelp.tex,
	* tex4ht-jsmath.tex: update license notices.
	* Makefile: add derivations.

2010-02-22  Karl Berry  <karl@gnu.org>

	* tex4ht-jsml-xtpipes.tex,
	* tex4ht-jsml.tex: update license notices.
	* Makefile: add derivations.

2010-02-21  Karl Berry  <karl@gnu.org>

	* tex4ht-mathltx.tex: update license notices.
	* Makefile: add derivations.

2010-02-18  Karl Berry  <karl@gnu.org>

	* tex4ht-mathplayer.tex: update license notices.
	* tex4ht-mkht.tex: update some license notices, more to come.
	* Makefile: add derivations.

2010-02-17  Karl Berry  <karl@gnu.org>

	* tex4ht-moz.tex: update license notices.
	* Makefile: add derivations.

2010-02-16  Karl Berry  <karl@gnu.org>

	* tex4ht-oo-xtpipes.tex: update license notices.
	* Makefile: add derivations.

2010-02-15  Karl Berry  <karl@gnu.org>

	* tex4ht-ooffice.tex: update license notices.
	* Makefile: add derivations.

2010-02-14  Karl Berry  <karl@gnu.org>

	* tex4ht-ooimpress.tex: update license notices.
	Remove would-be generation of ooimpress-math and ooimpress-mml,
	since it seems they are not actually generated.
	* Makefile: add derivations.

2010-02-13  Karl Berry  <karl@gnu.org>

	* common-code.tex: new file.
	* tex4ht-unicode.tex: use it.
	
	* tex4ht-options.tex: update license notices.
	* Makefile: add derivations.	

2010-02-12  Karl Berry  <karl@gnu.org>
