@@ -5,7 +5,7 @@
 %            first two compilations
 %
 % Copyright (C) 2009, 2010 TeX Users Group.
-% Copyright (C) 1996--2009 Eitan M. Gurari
+% Copyright (C) 2006--2009 Eitan M. Gurari
 % Released under LPPL 1.3c+.
 % See tex4ht-cpright.tex for license text.
 
