@@ -12,6 +12,7 @@
 \begin{document}
 
 \input{common}
+\input{tex4ht-cpright}
 
 
 %%%%%%%%%%%%%%%%%%
@@ -94,7 +95,6 @@ package tex4ht;
    Copyright (C) 2009, 2010 TeX Users Group
    Copyright (C) `CopyYear.2002. Eitan M. Gurari
 `<TeX4ht copyright`> */
-*/
 import xtpipes.XtpipesUni;
 import org.xml.sax.*;
 import org.xml.sax.helpers.DefaultHandler;
